--- a/index.html
+++ b/index.html
@@ -562,7 +562,7 @@ function initApp() {
 
 function loginWithSpotify() {
     var client_id = '4042a231fe624583a694f1d6cf9e25b5';
-    var redirect_uri = 'http://playlistminer.playlistmachinery.com/';
+    var redirect_uri = 'https://micscala.github.io/playlistminer/';
     var scopes = 'playlist-modify-public';
 
     if (document.location.hostname == 'localhost') {
@@ -643,14 +643,6 @@ $(document).ready(
     }
 );
 
-</script>
-<script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-  ga('create', 'UA-3675615-45', 'auto');
-  ga('send', 'pageview');
 </script>
 </body>
 </html>
